--- a/templates/home.html
+++ b/templates/home.html
@@ -1,13 +1,13 @@
 {% extends "base.html" %}
 
-{% block title %}Rocket League 6 Mans - Home{% endblock %}
+{% block title %}Rocket League 6 Gents - Home{% endblock %}
 
 {% block content %}
 <!-- Hero Section -->
 <div class="content-container mb-4">
     <div class="row align-items-center">
         <div class="col-lg-7">
-            <h2 class="mb-3">Welcome to Rocket League 6 Mans</h2>
+            <h2 class="mb-3">Welcome to Rocket League 6 Gents</h2>
             <p class="lead mb-4">A competitive matchmaking system for Discord communities. Play custom matches, track your stats, and climb the leaderboard!</p>
             <p class="mb-4">Join our Discord server and start playing today!</p>
             <div class="d-flex flex-wrap gap-2">
@@ -20,7 +20,7 @@
             </div>
         </div>
         <div class="col-lg-5 mt-4 mt-lg-0">
-            <img src="{{ url_for('static', filename='img/rocket-league-hero.png') }}" alt="Rocket League 6 Mans" class="img-fluid rounded">
+            <img src="{{ url_for('static', filename='img/rocket-league-hero.png') }}" alt="Rocket League 6 Gents" class="img-fluid rounded">
         </div>
     </div>
 </div>
@@ -173,7 +173,7 @@
                         <i class="fas fa-users fa-3x text-primary"></i>
                     </div>
                     <h5 class="card-title">1. Join the Queue</h5>
-                    <p class="card-text">Use the `/join` command in your Discord server to join the 6 mans queue. Once 6 players have joined, a match will be created.</p>
+                    <p class="card-text">Use the `/join` command in your Discord server to join the 6 gents queue. Once 6 players have joined, a match will be created.</p>
                 </div>
             </div>
         </div>
@@ -289,7 +289,7 @@
             <tbody>
                 <tr>
                     <td><code>/join</code></td>
-                    <td>Join the 6 mans queue</td>
+                    <td>Join the 6 gents queue</td>
                 </tr>
                 <tr>
                     <td><code>/leave</code></td>
