--- a/templates/leaderboard.html
+++ b/templates/leaderboard.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-{% block title %}Rocket League 6 Mans - Leaderboard{% endblock %}
+{% block title %}Rocket League 6 Gents - Leaderboard{% endblock %}
 
 {% block content %}
 <div class="content-container">
