Fix for discord input

--- a/templates/rank_check.html
+++ b/templates/rank_check.html
@@ -52,10 +52,10 @@
                     </div>
 
                     <div class="mb-3">
-                        <label for="discordUsername" class="form-label">Discord Username (optional - for automatic role assignment)</label>
+                        <label for="discordUsername" class="form-label">Discord Username for role assignment</label>
                         <div class="input-group">
                             <span class="input-group-text"><i class="fab fa-discord"></i></span>
-                            <input type="text" class="form-control" id="discordUsername" placeholder="e.g., Saikko or nathan._._." value="nathan._._">
+                            <input type="text" class="form-control" id="discordUsername" placeholder="e.g., Display name or account name" value="">
                         </div>
                         <small class="form-text text-muted">Your Discord username as shown in the server</small>
                     </div>
@@ -68,7 +68,7 @@
                 </div>
             </div>
         </div>
-
+`
         <div class="col-lg-6 mt-4 mt-lg-0">
             <h4 class="mb-3">Rank Tiers & Starting MMR</h4>
 
