--- a/templates/home.html
+++ b/templates/home.html
@@ -182,7 +182,7 @@
                         <i class="fas fa-gamepad fa-3x text-secondary"></i>
                     </div>
                     <h5 class="card-title">2. Play the Match</h5>
-                    <p class="card-text">Teams will be formed either through a vote system or captain picks. Play the match with your assigned teammates.</p>
+                    <p class="card-text">Teams will be formed through a vote system to either be random teams or a captain picks. Play the match with your assigned teammates.</p>
                 </div>
             </div>
         </div>
